--- a/如何增加系統使用者.md
+++ b/如何增加系統使用者.md
@@ -6,6 +6,13 @@ useradd -m awchjimmy
 # -m: 建立家目錄
 ```
 
+### 手動建立家目錄，上一步驟有使用-m可以跳過
+```sh
+mkdir /home/awchjimmy
+chown awchjimmy:awchjimmy /home/awchjimmy
+chmod 700 /home/awchjimmy
+```
+
 ### 幫使用者設定密碼
 ```sh
 passwd awchjimmy
