--- a/管理者/如何更新系統.md
+++ b/管理者/如何更新系統.md
@@ -19,5 +19,11 @@ apt install python3 python3-pip
 
 ### 將好用的 pip 套件安裝成系統套件
 ```sh
-sudo pip3 install sqlmap
+pip3 install sqlmap
+pip3 install transfersh-cli
+```
+
+### 移除 pip 套件
+```sh
+pip3 uninstall transfersh-cli
 ```
