--- a/管理者/安裝套件清單及說明.md
+++ b/管理者/安裝套件清單及說明.md
@@ -2,5 +2,7 @@
 
 |套件名稱|套件說明|來源|
 |----|----|----|
+|python3|python3|apt install|
+|python3-pip|python3 套件管理工具|apt install|
 |sqlmap|檢查網站是否有 SQL Injection 漏洞工具|pip3 install|
 |nmap|檢查主機上線狀態工具||
