--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -8,3 +8,10 @@ flowchart TD
     id1 --> id103(subfinder)
     id1 --> id104(搜尋引擎, site:taipower.com.tw)
 ```
+
+### 觀察網址參數
+```mermaid
+flowchart LR
+    id1(網址參數 => /submission_pdf.aspx?id=1) --> id101("id=x")
+    id101 --> id10101(burp intruder)
+```
