--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -13,5 +13,8 @@ flowchart TD
 ```mermaid
 flowchart LR
     id1(網址參數 => /submission_pdf.aspx?id=1) --> id101("id=x")
-    id101 --> id10101(burp intruder)
+    id101 --> id10101(burp intruder 找 IDOR)
+    id101 --> id10102(sqlmap 找 SQLi)
+    id1 --> id102("url=https://...")
+    id102 --> id10201("找 open redirect")
 ```
