--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -11,10 +11,16 @@ flowchart TD
 
 ### 觀察網址參數
 ```mermaid
-flowchart LR
+flowchart TD
     id1(網址參數 => /submission_pdf.aspx?id=1) --> id101("id=x")
+    id1 --> id102("url=https://, redirect_url=https://")
+    id1 --> id103("title=abc, q=abc, keyword=abc")
+    
     id101 --> id10101(burp intruder 找 IDOR)
     id101 --> id10102(sqlmap 找 SQLi)
-    id1 --> id102("url=https://...")
+    
     id102 --> id10201("找 open redirect")
+    
+    id103 --> id10301("找 XSS")
+    id103 --> id10302("找 HTML Injection")
 ```
