--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -24,3 +24,10 @@ flowchart TD
     id103 --> id10301("找 XSS")
     id103 --> id10302("找 HTML Injection")
 ```
+
+### 發現登入畫面
+```mermaid
+flowchart TD
+    id1(發現登入畫面) --> id101(沒有驗證碼)
+    id101 --> id10101(burp intruder 找 弱密碼)
+```
