--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -29,5 +29,11 @@ flowchart TD
 ```mermaid
 flowchart TD
     id1(發現登入畫面) --> id101(沒有驗證碼)
+    id1 --> id102(有驗證碼)
+    id1 --> id103(套裝軟體)
+    
     id101 --> id10101(burp intruder 找 弱密碼)
+    id102 --> id10201(驗證碼有缺陷)
+    id10201 --> id10101
+    id103 --> id10301(找 預設帳號密碼)
 ```
