--- a/流程圖/白帽流程圖.md
+++ b/流程圖/白帽流程圖.md
@@ -31,9 +31,12 @@ flowchart TD
     id1(發現登入畫面) --> id101(沒有驗證碼)
     id1 --> id102(有驗證碼)
     id1 --> id103(套裝軟體)
+    id1 --> id104(提示訊息過多)
     
     id101 --> id10101(burp intruder 找 弱密碼)
     id102 --> id10201(驗證碼有缺陷)
     id10201 --> id10101
     id103 --> id10301(找 預設帳號密碼)
+    id104 --> id10401(建立帳號清單)
+    id10401 --> id10101
 ```
